--- a/pc.html
+++ b/pc.html
@@ -15,17 +15,17 @@
     <div id="shop-body">
         <div id="product-one">
             <img src="images/PC 1.jpg" class="img-1">
-            <p class="name">iPhone 11 Pro</p>
+            <p class="name">HP Omen Core i5</p>
             <p class="price">$2999</p>
         </div>
         <div id="product-two">
             <img src="images/PC 2.jpg" class="img-1">
-            <p class="name">iPhone 12 Pro Max</p>
+            <p class="name">DELL Vostro Core i9</p>
             <p class="price">$3999</p>
         </div>
         <div id="product-three">
             <img src="images/PC 3.jpg" class="img-1">
-            <p class="name">iPhone 12 Pro Max</p>
+            <p class="name">ASUS PC AMD Ryzen 9</p>
             <p class="price">$4999</p>
         </div>
     </div>
